--- a/blog.html
+++ b/blog.html
@@ -31,4 +31,18 @@
 </footer>
 
 </body>
+
+</html>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>Blog Saya</title>
+</head>
+<body>
+  <h1>Daftar Artikel</h1>
+  <ul>
+    <li><a href="blog-pendapat-tentang-demo.html">Pendapat tentang Demo di Indonesia</a></li>
+  </ul>
+</body>
 </html>
