--- a/blog.html
+++ b/blog.html
@@ -37,7 +37,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Blog Saya</title>
+  <title>Blog</title>
 </head>
 <body>
   <h1>Daftar Artikel</h1>
@@ -46,3 +46,4 @@
   </ul>
 </body>
 </html>
+
